<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
       <item
        android:id="@+id/action_new"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_new"
        android:icon="@drawable/newfile"
        android:background="@null"/>
    
    <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_save"
        android:icon="@drawable/save1"
        android:background="@null"/>
    <item
        android:id="@+id/action_saveas"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_saveas"
        android:icon="@drawable/saveas"
        android:background="@null"/>
        <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_delete"
        android:background="@null"/>
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_exit"
        android:icon="@drawable/exit"
        android:background="@null"/>
    
        <item
        android:id="@+id/action_recent"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_recent"
        android:icon="@drawable/ic_launcher1"
        android:background="@null">
        <menu>
            
            </menu>
            </item>

    <item
        android:id="@+id/action_list"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_list"
        android:icon="@drawable/ic_launcher1"
        android:background="@null"/>
    
    
    

</menu>
